--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     networks:
       - frontend_backend_connection
     volumes:
-      - "./:/app"
+      - "/home/srinath/Documents/git/frnds/suraj/thesis_xai_frontend/:/app"
       - "sur_node_vol:/app/node_modules"
 
 networks:
