--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   frontend:
     build:
       context: /home/srinath/Documents/git/frnds/suraj/thesis_xai_frontend
-      dockerfile: Dockerfile.ui
+      dockerfile: Dockerfile.ui.dev
     container_name: sur-frontend
     image: sur-frontend
     ports:
